# MVANet-Product-Ready

./: README.md
backend/: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  start_system.ps1  start_system.sh
backend/config/: .env.example
backend/docs/: INTERVIEW_PREPARATION.md  PROJECT_STRUCTURE.md  README.md  interview_demo.py  interview_demo_simple.py
backend/scripts/: start_production.sh  start_server.py  stress_test.py
backend/src/api/: app.py
backend/src/core/: app_demo.py  app_optimized.py
backend/src/models/: MVANet.py  SwinTransformer.py
backend/tests/: data_processor.py  model_validator.py  test_api.py
backend/weights/: test_weights.pth
frontend/: README.md  index.html  package-lock.json  package.json  server.js
